Removed unused copies of QtSolutions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,7 +178,7 @@ if(WIN32 AND CMAKE_RUNTIME_OUTPUT_DIRECTORY)
 #   )
 
   mdt_copy_binary_dependencies_experimental(
-    TARGETS mdtitemeditor_sqlcontrollertest mdterror_widgetstest mdterrortest Application_Widgets QtSingleApplication
+    TARGETS mdtitemeditor_sqlcontrollertest mdterror_widgetstest mdterrortest Application_Widgets
     DESTINATION_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
     SEARCH_FIRST_PATH_PREFIX_LIST ${CMAKE_PREFIX_PATH}
   )
