--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 
 language: cpp
+dist: trusty
 
 compiler:
-- gcc
+ - gcc
+
+before_install:
+ - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+ - sudo apt-get update -qq
 
 script:
-- g++ TravisCiTest.cpp
+ - g++ TravisCiTest.cpp
