--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ compiler:
 before_install:
  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
  - sudo apt-get update -qq
+ - sudo apt-get install gcc-5 -y
 
 script:
  - g++ TravisCiTest.cpp
