--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,16 @@ language: cpp
 os: linux
 dist: trusty
 
+addons:
+ apt:
+  sources:
+   - sourceline: 'ppa:ubuntu-toolchain-r/test'
+  packages:
+   - gcc-5
+   - g++-5
+
 compiler:
  - gcc
-
-before_install:
- - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
- - sudo apt-get update -qq
- - sudo apt-get install gcc-5 -y
 
 script:
  - g++ TravisCiTest.cpp
