--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
     addons:
      apt:
       sources:
-       - ubuntu-toolchain-r/test
+       - ubuntu-toolchain-r-test
       packages:
        - g++-5
     env:
