--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,16 @@ matrix:
        - g++-5
     env:
      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+  - os: linux
+    addons:
+     apt:
+      sources:
+       - ubuntu-toolchain-r-test
+       - llvm-toolchain-precise-3.8
+      packages:
+       - clang-3.8
+    env:
+     - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8"
 
 
 before_install:
