--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
        - ubuntu-toolchain-r-test
       packages:
        - g++-5
+       - cmake
+       - libboost-dev
     env:
      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
   - os: linux
@@ -25,6 +27,8 @@ matrix:
        - llvm-toolchain-precise-3.8
       packages:
        - clang-3.8
+       - cmake
+       - libboost-dev
     env:
      - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8"
 
