--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
        - g++-5
        - cmake
        - libboost-dev
+       - qtbase5-dev
     env:
      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
   - os: linux
@@ -38,3 +39,4 @@ before_install:
 
 script:
  - ${CXX} TravisCiTest.cpp --std=c++14
+ - qmake -version
