--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ branches:
 language: cpp
 dist: trusty
 
+before_install:
+ - sudo add-apt-repository ppa:beineri/opt-qt58-trusty
+ - sudo apt-get -qq update
+
+install:
+ - sudo apt-get install --yes qt58base
+
 matrix:
  include:
   - os: linux
@@ -13,7 +20,6 @@ matrix:
      apt:
       sources:
        - ubuntu-toolchain-r-test
-       - beineri-opt-qt58
       packages:
        - g++-5
        - cmake
