--- a/.travis.yml
+++ b/.travis.yml
@@ -9,37 +9,26 @@ dist: trusty
 matrix:
  include:
   - os: linux
-    addons:
-     apt:
-      sources:
-       - ubuntu-toolchain-r-test
-      packages:
-       - g++-5
-       - cmake
-       - libboost-dev
     env:
      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
   - os: linux
-    addons:
-     apt:
-      sources:
-       - ubuntu-toolchain-r-test
-       - llvm-toolchain-precise-3.8
-      packages:
-       - clang-3.8
-       - cmake
-       - libboost-dev
     env:
      - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8"
 
-
 before_install:
- - sudo add-apt-repository ppa:beineri/opt-qt58-trusty
+ - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+ - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
+ - sudo add-apt-repository -y 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-3.8 main'
+ - sudo add-apt-repository --yes ppa:beineri/opt-qt58-trusty
  - sudo apt-get -qq update
  - eval "${MATRIX_EVAL}"
  
 install:
- - sudo apt-get install --yes qt58-meta-minimal
+ - g++-5
+ - clang-3.8
+ - cmake
+ - libboost-dev
+ - yes | sudo apt-get install --yes qt58-meta-minimal
 
 script:
  - ${CXX} TravisCiTest.cpp --std=c++14
