--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_install:
 install:
  - sudo apt-get install -y cmake
  - sudo apt-get install -y libboost-dev
- - yes | sudo apt-get install -y qt58-meta-minimal
+ - yes | sudo apt-get install -y qt58base qt58x11extras qt58imageformats qt58svg
 
 script:
  - ${CXX} TravisCiTest.cpp --std=c++14
