--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
        - g++-5
     env:
    #  - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
-     - CXX=g++-5
+     - COMPILER=g++-5
      - CACHE_FILE="ReleaseGcc.cmake"
   - os: linux
     addons:
@@ -29,12 +29,12 @@ matrix:
        - clang-3.8
     env:
     # - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8"
-     - CXX=clang++-3.8
+     - COMPILER=clang++-3.8
 
 before_install:
  - sudo add-apt-repository --yes ppa:beineri/opt-qt58-trusty
  - sudo apt-get -qq update
- - eval "${CXX}"
+ # - eval "${CXX}"
  # - eval "${MATRIX_EVAL}"
  
 install:
@@ -43,5 +43,6 @@ install:
  - yes | sudo apt-get install -y qt58base qt58x11extras qt58imageformats qt58svg
 
 script:
- - ${CXX} TravisCiTest.cpp --std=c++14
  - echo ${CACHE_FILE}
+ - ${COMPILER} --version
+ - ${COMPILER} TravisCiTest.cpp --std=c++14
