--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_install:
 install:
  - sudo apt-get install -y cmake
  - sudo apt-get install -y libboost-dev
- - yes | sudo apt-get install -y qt58base qt58x11extras qt58imageformats qt58svg qt58translations
+ - yes | sudo apt-get install -y qt58base qt58x11extras qt58imageformats qt58svg qt58tools
 
 script:
  - echo ${CACHE_FILE}
