--- a/libs/Error_Core/tests/CMakeLists.txt
+++ b/libs/Error_Core/tests/CMakeLists.txt
@@ -5,6 +5,6 @@ find_package(Qt5 COMPONENTS Test)
 
 # Target MdtErrorTest
 add_executable(mdterrortest src/ErrorTest.cpp)
-target_link_libraries(mdterrortest Error)
+target_link_libraries(mdterrortest Error_Core)
 target_link_libraries(mdterrortest Qt5::Test)
 add_test(NAME MdtErrorTest COMMAND mdterrortest)
