--- a/libs/ItemEditor/src/CMakeLists.txt
+++ b/libs/ItemEditor/src/CMakeLists.txt
@@ -59,7 +59,7 @@ mdt_add_library(
   NAME ItemEditor
   SOURCE_FILES ${SOURCE_FILES}
   HEADERS_DIRECTORY .
-  LINK_DEPENDENCIES Error Error_Widgets FilterExpression ItemModel Qt5::Widgets
+  LINK_DEPENDENCIES Error_Core Error_Widgets FilterExpression ItemModel Qt5::Widgets
 )
 mdt_set_library_description(
   NAME ItemEditor
