--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,16 +85,12 @@ include(MdtAddLibrary)
 #################################################################################################################################################
 
 add_subdirectory(libs/QtSolutions)
-add_subdirectory(libs/Error)
+add_subdirectory(libs/Error_Core)
 add_subdirectory(libs/Error_Widgets)
 add_subdirectory(libs/Application_Core)
 add_subdirectory(libs/Application_Core_Single)
-
-# add_subdirectory(libs/Application)
-
 add_subdirectory(libs/Application_Widgets)
 add_subdirectory(libs/Application_Widgets_Single)
-
 add_subdirectory(libs/Algorithm)
 add_subdirectory(libs/Expected)
 add_subdirectory(libs/FilterExpression)
