--- a/libs/Application_Core/src/CMakeLists.txt
+++ b/libs/Application_Core/src/CMakeLists.txt
@@ -18,7 +18,7 @@ mdt_add_library(
   NAME Application_Core
   SOURCE_FILES ${SOURCE_FILES}
   HEADERS_DIRECTORY .
-  LINK_DEPENDENCIES Error Qt5::Core
+  LINK_DEPENDENCIES Error_Core Qt5::Core
 )
 target_compile_definitions(Application_Core PRIVATE QT_NO_CAST_FROM_ASCII QT_NO_CAST_TO_ASCII QT_NO_CAST_FROM_BYTEARRAY)
 
