--- a/libs/ItemEditor_Sql/src/CMakeLists.txt
+++ b/libs/ItemEditor_Sql/src/CMakeLists.txt
@@ -17,7 +17,7 @@ mdt_add_library(
   NAME ItemEditor_Sql
   SOURCE_FILES ${SOURCE_FILES}
   HEADERS_DIRECTORY .
-  LINK_DEPENDENCIES Error Error_Widgets FilterExpression ItemModel ItemEditor Sql Qt5::Widgets
+  LINK_DEPENDENCIES Error_Core Error_Widgets FilterExpression ItemModel ItemEditor Sql Qt5::Widgets
 )
 mdt_set_library_description(
   NAME ItemEditor_Sql
