--- a/libs/PlainText_Core/src/CMakeLists.txt
+++ b/libs/PlainText_Core/src/CMakeLists.txt
@@ -36,7 +36,7 @@ mdt_add_library(
   NAME PlainText_Core
   SOURCE_FILES ${SOURCE_FILES}
   HEADERS_DIRECTORY .
-  LINK_DEPENDENCIES Error Expected Qt5::Core
+  LINK_DEPENDENCIES Error_Core Expected Qt5::Core
 )
 mdt_set_library_description(
   NAME PlainText_Core
