Imported lib Error_Core from experimental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,30 +84,30 @@ include(MdtAddLibrary)
 # Libraries
 #################################################################################################################################################
 
-add_subdirectory(libs/QtSolutions)
+# add_subdirectory(libs/QtSolutions)
 add_subdirectory(libs/Error_Core)
-add_subdirectory(libs/Error_Widgets)
-add_subdirectory(libs/Application_Core)
-add_subdirectory(libs/Application_Core_Single)
-add_subdirectory(libs/Application_Widgets)
-add_subdirectory(libs/Application_Widgets_Single)
-add_subdirectory(libs/Algorithm)
-add_subdirectory(libs/Expected)
-add_subdirectory(libs/FilterExpression)
-add_subdirectory(libs/Numeric)
-add_subdirectory(libs/PlainText_Core)
-# add_subdirectory(libs/SerialPort)
-add_subdirectory(libs/Sql)
-add_subdirectory(libs/ItemModel)
-add_subdirectory(libs/ItemEditor)
-add_subdirectory(libs/ItemEditor_Sql)
-add_subdirectory(libs/DeployUtils_Core)
+# add_subdirectory(libs/Error_Widgets)
+# add_subdirectory(libs/Application_Core)
+# add_subdirectory(libs/Application_Core_Single)
+# add_subdirectory(libs/Application_Widgets)
+# add_subdirectory(libs/Application_Widgets_Single)
+# add_subdirectory(libs/Algorithm)
+# add_subdirectory(libs/Expected)
+# add_subdirectory(libs/FilterExpression)
+# add_subdirectory(libs/Numeric)
+# add_subdirectory(libs/PlainText_Core)
+# # add_subdirectory(libs/SerialPort)
+# add_subdirectory(libs/Sql)
+# add_subdirectory(libs/ItemModel)
+# add_subdirectory(libs/ItemEditor)
+# add_subdirectory(libs/ItemEditor_Sql)
+# add_subdirectory(libs/DeployUtils_Core)
 
 #################################################################################################################################################
 # Tools
 #################################################################################################################################################
 
-add_subdirectory(tools)
+# add_subdirectory(tools)
 
 #################################################################################################################################################
 # Unit tests
