--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,8 @@ matrix:
        - llvm-toolchain-precise-3.8
       packages:
        - clang-3.8
+       # Have to install a recent version of libstdc++ (and available libc++ seems not to support C++14?)
+       - g++-5
     env:
      - C_COMPILER=clang-3.8
      - CXX_COMPILER=clang++-3.8
@@ -54,6 +56,8 @@ matrix:
        - llvm-toolchain-precise-3.8
       packages:
        - clang-3.8
+       # Have to install a recent version of libstdc++ (and available libc++ seems not to support C++14?)
+       - g++-5
     env:
      - C_COMPILER=clang-3.8
      - CXX_COMPILER=clang++-3.8
