--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ include(MdtAddLibrary)
 # add_subdirectory(libs/QtSolutions)
 add_subdirectory(libs/Error_Core)
 # add_subdirectory(libs/Error_Widgets)
-# add_subdirectory(libs/Application_Core)
+add_subdirectory(libs/Application_Core)
 # add_subdirectory(libs/Application_Core_Single)
 # add_subdirectory(libs/Application_Widgets)
 # add_subdirectory(libs/Application_Widgets_Single)
