--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ add_subdirectory(libs/Error_Core)
 # add_subdirectory(libs/Error_Widgets)
 add_subdirectory(libs/Application_Core)
 add_subdirectory(libs/Application_Core_Single)
-# add_subdirectory(libs/Application_Widgets)
+add_subdirectory(libs/Application_Widgets)
 # add_subdirectory(libs/Application_Widgets_Single)
 # add_subdirectory(libs/Algorithm)
 # add_subdirectory(libs/Expected)
