Imported lib Application_Widgets_Single from experimental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ add_subdirectory(libs/Error_Core)
 add_subdirectory(libs/Application_Core)
 add_subdirectory(libs/Application_Core_Single)
 add_subdirectory(libs/Application_Widgets)
-# add_subdirectory(libs/Application_Widgets_Single)
+add_subdirectory(libs/Application_Widgets_Single)
 # add_subdirectory(libs/Algorithm)
 # add_subdirectory(libs/Expected)
 # add_subdirectory(libs/FilterExpression)
