Imported lib Error_Widgets from experimental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ include(MdtAddLibrary)
 
 add_subdirectory(libs/QtSolutions)
 add_subdirectory(libs/Error_Core)
-# add_subdirectory(libs/Error_Widgets)
+add_subdirectory(libs/Error_Widgets)
 add_subdirectory(libs/Application_Core)
 add_subdirectory(libs/Application_Core_Single)
 add_subdirectory(libs/Application_Widgets)
