--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,7 @@ add_subdirectory(libs/Application_Core)
 add_subdirectory(libs/Application_Core_Single)
 add_subdirectory(libs/Application_Widgets)
 add_subdirectory(libs/Application_Widgets_Single)
-# add_subdirectory(libs/Algorithm)
+add_subdirectory(libs/Algorithm)
 # add_subdirectory(libs/Expected)
 # add_subdirectory(libs/FilterExpression)
 # add_subdirectory(libs/Numeric)
