--- a/.travis.yml
+++ b/.travis.yml
@@ -81,3 +81,6 @@ script:
  - cmake -C ../cmake/caches/${CACHE_FILE} -D CMAKE_C_COMPILER=${C_COMPILER} -D CMAKE_CXX_COMPILER=${CXX_COMPILER} -D QT_PREFIX_PATH=/opt/qt58 ..
  - make -j4
  - make test
+
+after_failure:
+ - cat Testing/Temporary/LastTest.log
