In lib Expected: fixed warnings when compiling test with Clang

--- a/libs/Expected/tests/CMakeLists.txt
+++ b/libs/Expected/tests/CMakeLists.txt
@@ -7,3 +7,9 @@ find_package(Qt5 COMPONENTS Test)
 add_executable(mdtexpectedtest src/ExpectedTest.cpp)
 add_test(NAME MdtExpectedTest COMMAND mdtexpectedtest)
 target_link_libraries(mdtexpectedtest Expected Application_Core Qt5::Test)
+
+# Clang warns about explicit move that prevents copy elision.
+# For this test case, we need explicit move to check our code
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  target_compile_options(mdtexpectedtest PRIVATE -Wno-pessimizing-move)
+endif()
