Imported lib FilterExpression from experimental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ add_subdirectory(libs/Application_Widgets)
 add_subdirectory(libs/Application_Widgets_Single)
 add_subdirectory(libs/Algorithm)
 add_subdirectory(libs/Expected)
-# add_subdirectory(libs/FilterExpression)
+add_subdirectory(libs/FilterExpression)
 add_subdirectory(libs/Numeric)
 # add_subdirectory(libs/PlainText_Core)
 # # add_subdirectory(libs/SerialPort)
