Imported lib PlainTest_Core from experimental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ add_subdirectory(libs/Algorithm)
 add_subdirectory(libs/Expected)
 add_subdirectory(libs/FilterExpression)
 add_subdirectory(libs/Numeric)
-# add_subdirectory(libs/PlainText_Core)
+add_subdirectory(libs/PlainText_Core)
 # # add_subdirectory(libs/SerialPort)
 # add_subdirectory(libs/Sql)
 # add_subdirectory(libs/ItemModel)
