Import MdtCpBinDeps from experimental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,7 @@ add_subdirectory(libs/DeployUtils_Core)
 # Tools
 #################################################################################################################################################
 
-# add_subdirectory(tools)
+add_subdirectory(tools)
 
 #################################################################################################################################################
 # Unit tests
