--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,15 +1,2 @@
-# CMake project file for Multi Diag Tools
 
-# Project
-project (multidiagtools)
-
-# Access to project's include files
-include_directories("${PROJECT_SOURCE_DIR}/../src")
-
-# * UIC Number *
-add_subdirectory("${PROJECT_SOURCE_DIR}/uicnumber")
-
-# * mdtterm *
-if(UNIX)
-  add_subdirectory("${PROJECT_SOURCE_DIR}/mdtterm")
-endif(UNIX)
+add_subdirectory(MdtDeployUtils)
