Use target_include_directories() for Boost

--- a/libs/ItemModel/src/CMakeLists.txt
+++ b/libs/ItemModel/src/CMakeLists.txt
@@ -53,9 +53,6 @@ find_package(Qt5 COMPONENTS Core Gui)
 # See: http://stackoverflow.com/questions/26749461/how-to-determine-the-boost-library-names-for-cmake
 if(NOT Boost_FOUND)
   find_package(Boost REQUIRED)
-  if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS})
-  endif(Boost_FOUND)
 endif()
 
 mdt_add_library(
@@ -64,6 +61,8 @@ mdt_add_library(
   HEADERS_DIRECTORY .
   LINK_DEPENDENCIES Error_Core Algorithm FilterExpression Qt5::Core Qt5::Gui
 )
+target_include_directories(ItemModel PUBLIC ${Boost_INCLUDE_DIRS})
+
 mdt_set_library_description(
   NAME ItemModel
   DESCRIPTION "ItemModel provides additions for Qt item/view models."
