In lib Error: create a format engine for logger backend and fix test
ErrorTest::fileBackendTest() allways failed on Windows and reported
strange results on Linux. Create a format engine for more flexibility
and make testing backends more robust. Test failed also because of a
wrong usage of QTemporaryFile.

--- a/libs/Error_Core/src/CMakeLists.txt
+++ b/libs/Error_Core/src/CMakeLists.txt
@@ -10,6 +10,8 @@ set(SOURCE_FILES
     Mdt/ErrorLogger/Backend.cpp
     Mdt/ErrorLogger/ConsoleBackend.cpp
     Mdt/ErrorLogger/FileBackend.cpp
+    Mdt/ErrorLogger/FormatEngine.cpp
+    Mdt/ErrorLogger/FileBackendFormatEngine.cpp
 )
 
 mdt_add_library(
