--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,9 @@ environment:
   matrix:
     # MinGW
     - CMAKE_GENERATOR: "MinGW Makefiles"
-
+      # Workaround for CMake not wanting sh.exe on PATH for MinGW
+      # Thanks to: http://help.appveyor.com/discussions/problems/3193-cmake-building-for-mingw-issue-with-git-shexe
+      set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%
 
 build_script:
   - mkdir build
