--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ environment:
   matrix:
     # MinGW
     - CMAKE_GENERATOR: "MinGW Makefiles"
+      QT_PREFIX_PATH: 'C:\Qt\5.9.1\mingw53_32'
+      MINGW_PREFIX_PATH: 'C:\Qt\Tools\mingw530_32'
 
 before_build:
   # Workaround for CMake not wanting sh.exe on PATH for MinGW
@@ -18,6 +20,7 @@ before_build:
   - set PATH=%PATH:C:\Program Files\Git\bin;=%
   - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%
+  - set PATH=%QT_PREFIX_PATH%;%MINGW_PREFIX_PATH%;%PATH%
 
 build_script:
   - mkdir build
