--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,8 @@
 
 environment:
 
-  BOOST_PREFIX_PATH: 'C:\Libraries'
+  #BOOST_PREFIX_PATH: 'C:\Libraries'
+  BOOST_ROOT: 'C:\Libraries'
 
   matrix:
     # MinGW
@@ -28,4 +29,5 @@ before_build:
 build_script:
   - mkdir build
   - cd build
-  - cmake -C ..\cmake\caches\ReleaseGcc.cmake -G "%CMAKE_GENERATOR%" -D CMAKE_PREFIX_PATH="BOOST_PREFIX_PATH" ..\
+  - cmake -C ..\cmake\caches\ReleaseGcc.cmake -G "%CMAKE_GENERATOR%" ..\
+  #- cmake -C ..\cmake\caches\ReleaseGcc.cmake -G "%CMAKE_GENERATOR%" -D CMAKE_PREFIX_PATH="BOOST_PREFIX_PATH" ..\
