--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,8 @@ add_subdirectory(libs/ItemModel)
 # add_subdirectory(libs/ItemEditor_Sql)
 add_subdirectory(libs/DeployUtils_Core)
 
+include(MdtInstallQt5)
+
 #################################################################################################################################################
 # Tools
 #################################################################################################################################################
