--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -49,4 +49,13 @@ addDeployUtilsTest("QtLibraryTest")
 if( (NOT WIN32) OR (WIN32 AND CMAKE_CROSSCOMPILING) )
   target_compile_definitions(mdtdeployutils_qtlibrarytest PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
 endif()
-
+if(UNIX)
+  addDeployUtilsTest("QtLibraryTestLinux")
+endif()
+if(WIN32)
+  addDeployUtilsTest("QtLibraryTestWindows")
+endif()
+addDeployUtilsTest("RPathTest")
+if(UNIX AND NOT APPLE)
+  addDeployUtilsTest("RPathTestLinux")
+endif()
