--- a/tools/MdtDeployUtils/MdtCpBinDeps/src/CMakeLists.txt
+++ b/tools/MdtDeployUtils/MdtCpBinDeps/src/CMakeLists.txt
@@ -27,6 +27,52 @@ message("CMAKE_HOST_SYSTEM : ${CMAKE_HOST_SYSTEM}")
 if(NOT CMAKE_CROSSCOMPILING)
   add_executable(mdtcpbindeps ${SOURCE_FILES})
   target_link_libraries(mdtcpbindeps Application_Core DeployUtils_Core Qt5::Core)
+  # Commands to install the program
+  if( CMAKE_INSTALL_PREFIX AND NOT ("${CMAKE_INSTALL_PREFIX}" STREQUAL "/usr") )
+    set_target_properties(mdtcpbindeps PROPERTIES INSTALL_RPATH "\$ORIGIN/../lib")
+  endif()
+  install(
+    TARGETS mdtcpbindeps
+    EXPORT mdtcpbindepsTargets
+    RUNTIME DESTINATION bin COMPONENT tools
+  )
+  # Commands to generate Config.cmake file
+  install(
+    EXPORT mdtcpbindepsTargets
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/mdtcpbindeps"
+#     NAMESPACE ${PROJECT_NAME}::
+    COMPONENT tools
+  )
+  set(config_in_file "${CMAKE_CURRENT_BINARY_DIR}/mdtcpbindepsConfig.cmake.in")
+  file(WRITE "${config_in_file}" "@PACKAGE_INIT@\n")
+#   set(mdt_dep_targets)
+#   mdt_get_library_internal_dependencies(
+#     mdt_dep_targets
+#     DEP_TARGETS ${link_deps}
+#   )
+#   if(mdt_dep_targets)
+#     file(APPEND "${config_in_file}" "set(@PROJECT_NAME@${target_name}Dependencies \"${mdt_dep_targets}\")\n")
+#     file(APPEND "${config_in_file}" "foreach(dependency \${@PROJECT_NAME@${target_name}Dependencies})\n")
+#     file(APPEND "${config_in_file}" "  find_package(\n")
+#     file(APPEND "${config_in_file}" "    @PROJECT_NAME@\${dependency}\n")
+#     file(APPEND "${config_in_file}" "    CONFIG\n")
+#     file(APPEND "${config_in_file}" "    PATHS \"\${CMAKE_CURRENT_LIST_DIR}/..\" NO_DEFAULT_PATH\n")
+#     file(APPEND "${config_in_file}" "  )\n")
+#     file(APPEND "${config_in_file}" "endforeach()\n")
+#   endif()
+  file(APPEND "${config_in_file}" "include(\"\${CMAKE_CURRENT_LIST_DIR}/mdtcpbindepsTargets.cmake\")\n")
+  file(APPEND "${config_in_file}" "check_required_components(mdtcpbindeps)")
+  include(CMakePackageConfigHelpers)
+  configure_package_config_file(
+    "${config_in_file}"
+    "${CMAKE_CURRENT_BINARY_DIR}/mdtcpbindepsConfig.cmake"
+    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake"
+  )
+  install(
+    FILES "${CMAKE_CURRENT_BINARY_DIR}/mdtcpbindepsConfig.cmake"
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/mdtcpbindeps"
+    COMPONENT tools
+  )
 endif()
 
 # add_custom_target(
