--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,8 @@ before_install:
 install:
  - sudo apt-get install -y cmake
  - sudo apt-get install -y libboost-dev
- - sudo apt-get install -y patchelf
+ - wget http://ftp.de.debian.org/debian/pool/main/p/patchelf/patchelf_0.8-2_amd64.deb
+ - sudo dpkg -i patchelf_0.8-2_amd64.deb
  - yes | sudo apt-get install -y qt58base qt58x11extras qt58imageformats qt58svg qt58tools
 
 before_script:
