Locate bug: mdtcpbindeps copies release and debug dlls

--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -39,6 +39,10 @@ addDeployUtilsTest("BinaryFormatTest")
 addDeployUtilsTest("PlatformTest")
 addDeployUtilsTest("BinaryDependenciesTest")
 target_compile_definitions(mdtdeployutils_binarydependenciestest PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
+if(WIN32)
+  addDeployUtilsTest("BinaryDependenciesTestWindows")
+  target_compile_definitions(mdtdeployutils_binarydependenciestestwindows PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
+endif()
 addDeployUtilsTest("BinaryDependenciesLddTest")
 addDeployUtilsTest("BinaryDependenciesObjdumpTest")
 addDeployUtilsTest("FileCopierTest")
