Locate bug: mdtcpbindeps copies release and debug dlls

--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -58,6 +58,7 @@ if(UNIX)
 endif()
 if(WIN32)
   addDeployUtilsTest("QtLibraryTestWindows")
+  target_compile_definitions(mdtdeployutils_qtlibrarytestwindows PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
 endif()
 addDeployUtilsTest("RPathTest")
 if(UNIX AND NOT APPLE)
