--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -59,6 +59,7 @@ endif()
 if(WIN32)
   addDeployUtilsTest("QtLibraryTestWindows")
   target_compile_definitions(mdtdeployutils_qtlibrarytestwindows PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
+  target_link_libraries(mdtdeployutils_qtlibrarytestwindows Application_Widgets)
 endif()
 addDeployUtilsTest("RPathTest")
 if(UNIX AND NOT APPLE)
